logs/output_ferro8.txt
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:53: UserWarning: train_data has been renamed data
  warnings.warn("train_data has been renamed data")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:58: UserWarning: test_data has been renamed data
  warnings.warn("test_data has been renamed data")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:43: UserWarning: train_labels has been renamed targets
  warnings.warn("train_labels has been renamed targets")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:48: UserWarning: test_labels has been renamed targets
  warnings.warn("test_labels has been renamed targets")
init done
{'quantization.global_wb': 8, 'inp_mult': 110, 'nb_hidden': 800, 'nb_steps': 150, 'batch_size': 128, 'quantization.global_lr': 0.0004, 'reg_size': 0.001659079761781826, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=1.12128
Test accuracy: 0.912
Train accuracy: 0.814
Epoch 2: loss=0.34801
Test accuracy: 0.928
Train accuracy: 0.918
Epoch 3: loss=0.26745
Test accuracy: 0.933
Train accuracy: 0.929
Epoch 4: loss=0.25053
Test accuracy: 0.937
Train accuracy: 0.935
Epoch 5: loss=0.24690
Test accuracy: 0.938
Train accuracy: 0.938
Epoch 6: loss=0.24703
Test accuracy: 0.940
Train accuracy: 0.939
Epoch 7: loss=0.25299
Test accuracy: 0.935
Train accuracy: 0.939
Epoch 8: loss=0.25244
Test accuracy: 0.939
Train accuracy: 0.942
Epoch 9: loss=0.25724
Test accuracy: 0.937
Train accuracy: 0.942
Epoch 10: loss=0.22855
Test accuracy: 0.945
Train accuracy: 0.952
Epoch 11: loss=0.21999
Test accuracy: 0.947
Train accuracy: 0.955
Epoch 12: loss=0.21827
Test accuracy: 0.948
Train accuracy: 0.957
Epoch 13: loss=0.21683
Test accuracy: 0.948
Train accuracy: 0.957
Epoch 14: loss=0.21717
Test accuracy: 0.948
Train accuracy: 0.957
Epoch 15: loss=0.21654
Test accuracy: 0.948
Train accuracy: 0.958
Epoch 16: loss=0.21701
Test accuracy: 0.947
Train accuracy: 0.959
Epoch 17: loss=0.21612
Test accuracy: 0.948
Train accuracy: 0.960
Epoch 18: loss=0.21712
Test accuracy: 0.947
Train accuracy: 0.959
Epoch 19: loss=0.21289
Test accuracy: 0.948
Train accuracy: 0.961
Epoch 20: loss=0.21249
Test accuracy: 0.948
Train accuracy: 0.961
Epoch 21: loss=0.21230
Test accuracy: 0.948
Train accuracy: 0.961
Epoch 22: loss=0.21205
Test accuracy: 0.947
Train accuracy: 0.961
Epoch 23: loss=0.21258
Test accuracy: 0.948
Train accuracy: 0.961
Epoch 24: loss=0.21234
Test accuracy: 0.947
Train accuracy: 0.962
Epoch 25: loss=0.21239
Test accuracy: 0.948
Train accuracy: 0.962
Epoch 26: loss=0.21238
Test accuracy: 0.947
Train accuracy: 0.962
Epoch 27: loss=0.21223
Test accuracy: 0.948
Train accuracy: 0.962
Epoch 28: loss=0.21172
Test accuracy: 0.948
Train accuracy: 0.962
Epoch 29: loss=0.21163
Test accuracy: 0.948
Train accuracy: 0.962
Epoch 30: loss=0.21165
Test accuracy: 0.948
Train accuracy: 0.962
Epoch 31: loss=0.21159
Test accuracy: 0.948
Train accuracy: 0.962
Epoch 32: loss=0.21164
Test accuracy: 0.948
Train accuracy: 0.962
Epoch 33: loss=0.21164
Test accuracy: 0.948
Train accuracy: 0.962
Epoch 34: loss=0.21182
Test accuracy: 0.948
Train accuracy: 0.962
Epoch 35: loss=0.21152
Test accuracy: 0.948
Train accuracy: 0.962
{'quantization.global_wb': 8, 'inp_mult': 110, 'reg_size': 0.001659079761781826, 'weight_sum': 0.1146141882514887}
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
python: can't open file 'spytorch_dvs2_ferro.py': [Errno 2] No such file or directory
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
  File "spytorch_dvs2_ferrro.py", line 59
    print("hello")print("hello")
                      ^
SyntaxError: invalid syntax
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
  File "spytorch_dvs2_ferrro.py", line 59
    print("hello")print("hello")
                      ^
SyntaxError: invalid syntax
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
  File "spytorch_dvs2_ferrro.py", line 59
    print("hello")print("hello")
                      ^
SyntaxError: invalid syntax
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
init done
{'quantization.global_wb': 8, 'inp_mult': 110, 'nb_hidden': 4000, 'nb_steps': 150, 'batch_size': 64, 'quantization.global_lr': 1.5e-05, 'reg_size': 0.001, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=10.11264
Test accuracy: 0.262
Train accuracy: 0.271
Epoch 2: loss=52.38360
Test accuracy: 0.305
Train accuracy: 0.346
Epoch 3: loss=2.35650
Test accuracy: 0.207
Train accuracy: 0.428
Epoch 4: loss=2.40224
Test accuracy: 0.199
Train accuracy: 0.463
Epoch 5: loss=2.00046
Test accuracy: 0.238
Train accuracy: 0.536
Epoch 6: loss=1.53181
Test accuracy: 0.234
Train accuracy: 0.629
Epoch 7: loss=1.22264
Test accuracy: 0.262
Train accuracy: 0.699
Epoch 8: loss=0.99566
Test accuracy: 0.270
Train accuracy: 0.747
Epoch 9: loss=0.83332
Test accuracy: 0.289
Train accuracy: 0.786
Epoch 10: loss=0.70875
Test accuracy: 0.289
Train accuracy: 0.823
Epoch 11: loss=0.70342
Test accuracy: 0.297
Train accuracy: 0.822
Epoch 12: loss=0.68235
Test accuracy: 0.285
Train accuracy: 0.826
Epoch 13: loss=0.67208
Test accuracy: 0.281
Train accuracy: 0.829
Epoch 14: loss=0.65927
Test accuracy: 0.289
Train accuracy: 0.832
Epoch 15: loss=0.64278
Test accuracy: 0.293
Train accuracy: 0.842
Epoch 16: loss=0.63669
Test accuracy: 0.301
Train accuracy: 0.841
Epoch 17: loss=0.61444
Test accuracy: 0.277
Train accuracy: 0.849
Epoch 18: loss=0.60184
Test accuracy: 0.305
Train accuracy: 0.852
Epoch 19: loss=0.59084
Test accuracy: 0.305
Train accuracy: 0.858
Epoch 20: loss=0.59712
Test accuracy: 0.297
Train accuracy: 0.858
Epoch 21: loss=0.59084
Test accuracy: 0.301
Train accuracy: 0.860
Epoch 22: loss=0.59312
Test accuracy: 0.289
Train accuracy: 0.859
Epoch 23: loss=0.58564
Test accuracy: 0.289
Train accuracy: 0.858
Epoch 24: loss=0.57993
Test accuracy: 0.289
Train accuracy: 0.861
Epoch 25: loss=0.58705
Test accuracy: 0.309
Train accuracy: 0.858
Epoch 26: loss=0.58588
Test accuracy: 0.301
Train accuracy: 0.859
Epoch 27: loss=0.57197
Test accuracy: 0.293
Train accuracy: 0.865
Epoch 28: loss=0.58338
Test accuracy: 0.281
Train accuracy: 0.860
Epoch 29: loss=0.58277
Test accuracy: 0.320
Train accuracy: 0.859
Epoch 30: loss=0.58206
Test accuracy: 0.293
Train accuracy: 0.860
Epoch 31: loss=0.56741
Test accuracy: 0.312
Train accuracy: 0.862
Epoch 32: loss=0.57585
Test accuracy: 0.297
Train accuracy: 0.861
Epoch 33: loss=0.56204
Test accuracy: 0.293
Train accuracy: 0.859
Epoch 34: loss=0.57925
Test accuracy: 0.309
Train accuracy: 0.860
Epoch 35: loss=0.57932
Test accuracy: 0.320
Train accuracy: 0.861
{'quantization.global_wb': 8, 'inp_mult': 110, 'reg_size': 0.001, 'weight_sum': 1.12}
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
init done
{'quantization.global_wb': 8, 'inp_mult': 110, 'nb_hidden': 4000, 'nb_steps': 100, 'batch_size': 64, 'quantization.global_lr': 1.5e-05, 'reg_size': 0.23251203794408123, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=1041.59085
Test accuracy: 0.082
Train accuracy: 0.080
Epoch 2: loss=1070.39798
Test accuracy: 0.207
Train accuracy: 0.151
Epoch 3: loss=960.50196
Test accuracy: 0.207
Train accuracy: 0.229
Epoch 4: loss=922.38330
Test accuracy: 0.234
Train accuracy: 0.286
Epoch 5: loss=877.13795
Test accuracy: 0.242
Train accuracy: 0.330
Epoch 6: loss=835.89999
Test accuracy: 0.266
Train accuracy: 0.402
Epoch 7: loss=793.68741
Test accuracy: 0.270
Train accuracy: 0.456
Epoch 8: loss=745.54936
Test accuracy: 0.293
Train accuracy: 0.477
Epoch 9: loss=699.09112
Test accuracy: 0.270
Train accuracy: 0.486
Epoch 10: loss=671.27893
Test accuracy: 0.289
Train accuracy: 0.511
Epoch 11: loss=1032.84969
Test accuracy: 0.273
Train accuracy: 0.508
Epoch 12: loss=662.02159
Test accuracy: 0.277
Train accuracy: 0.510
Epoch 13: loss=657.82144
Test accuracy: 0.277
Train accuracy: 0.525
Epoch 14: loss=653.61618
Test accuracy: 0.270
Train accuracy: 0.518
Epoch 15: loss=649.37352
Test accuracy: 0.281
Train accuracy: 0.525
Epoch 16: loss=645.10183
Test accuracy: 0.262
Train accuracy: 0.520
Epoch 17: loss=640.79642
Test accuracy: 0.270
Train accuracy: 0.528
Epoch 18: loss=636.48001
Test accuracy: 0.270
Train accuracy: 0.527
Epoch 19: loss=633.97440
Test accuracy: 0.277
Train accuracy: 0.527
Epoch 20: loss=633.53732
Test accuracy: 0.266
Train accuracy: 0.527
Epoch 21: loss=633.11080
Test accuracy: 0.270
Train accuracy: 0.528
Epoch 22: loss=632.67883
Test accuracy: 0.281
Train accuracy: 0.526
Epoch 23: loss=632.22699
Test accuracy: 0.273
Train accuracy: 0.529
Epoch 24: loss=631.77260
Test accuracy: 0.285
Train accuracy: 0.530
Epoch 25: loss=631.33885
Test accuracy: 0.281
Train accuracy: 0.526
Epoch 26: loss=630.91976
Test accuracy: 0.273
Train accuracy: 0.524
Epoch 27: loss=630.46166
Test accuracy: 0.270
Train accuracy: 0.527
Epoch 28: loss=630.21776
Test accuracy: 0.277
Train accuracy: 0.525
Epoch 29: loss=630.16833
Test accuracy: 0.277
Train accuracy: 0.526
Epoch 30: loss=630.12039
Test accuracy: 0.281
Train accuracy: 0.528
Epoch 31: loss=630.07376
Test accuracy: 0.285
Train accuracy: 0.525
Epoch 32: loss=630.03433
Test accuracy: 0.285
Train accuracy: 0.525
Epoch 33: loss=629.99384
Test accuracy: 0.273
Train accuracy: 0.530
Epoch 34: loss=629.94194
Test accuracy: 0.273
Train accuracy: 0.529
Epoch 35: loss=629.90322
Test accuracy: 0.285
Train accuracy: 0.527
{'quantization.global_wb': 8, 'inp_mult': 110, 'reg_size': 0.23251203794408123, 'weight_sum': 2.24}
